ported to java10