@@ -8,4 +8,5 @@ then
     ocjar=/usr/share/opencards/$ocjar
 fi
 
-java -Xmx512m -jar $ocjar
+# see https://stackoverflow.com/questions/43574426/how-to-resolve-java-lang-noclassdeffounderror-javax-xml-bind-jaxbexception-in-j
+java -Xmx512m -XX:+IgnoreUnrecognizedVMOptions --add-modules=ALL-SYSTEM --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED -jar $ocjar
